--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,14 +21,74 @@ android {
         }
     }
 
+    dataBinding {
+        enabled = true
+    }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.appcompat:appcompat:"+rootProject.appCompatVersion
+    implementation "androidx.constraintlayout:constraintlayout:"+rootProject.appCompatVersion
+
+    //Image Loader
+//    implementation "com.github.bumptech.glide:glide:"+rootProject.glideVersion
+//    annotationProcessor "com.github.bumptech.glide:compiler:"+rootProject.glideVersion
+
+    implementation ("com.github.bumptech.glide:glide:4.9.0") {
+        exclude group: "com.android.support"
+    }
+    annotationProcessor 'androidx.annotation:annotation:1.1.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation ("com.github.bumptech.glide:glide:4.9.0@aar") {
+        transitive = true
+    }
+
+    //Dagger
+    implementation "com.google.dagger:dagger:"+rootProject.daggerVersion
+    implementation "com.google.dagger:dagger-android:"+rootProject.daggerVersion
+    implementation "com.google.dagger:dagger-android-support:"+rootProject.daggerVersion
+    annotationProcessor "com.google.dagger:dagger-compiler:"+rootProject.daggerVersion
+    annotationProcessor "com.google.dagger:dagger-android-processor:"+rootProject.daggerVersion
+
+
+    //Networking
+    implementation "com.squareup.retrofit2:retrofit:"+rootProject.retrofit
+    implementation "com.squareup.retrofit2:converter-gson:"+rootProject.retrofit
+    implementation "com.squareup.okhttp3:okhttp:"+rootProject.okhttp
+    implementation "com.squareup.okhttp3:logging-interceptor:"+rootProject.okhttp
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+
+    implementation "com.squareup.retrofit2:adapter-rxjava2:"+rootProject.retrofit
+    implementation "com.squareup.retrofit2:converter-moshi:"+rootProject.retrofit
+
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.9"
+
+
+    //Log
+    implementation "com.orhanobut:logger:"+rootProject.debugLog
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha03'
+
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.lifecycle:viewmodel:1.1.1"
+
+    implementation "android.arch.paging:runtime:1.0.1"
+
+
+//    implementation 'com.google.dagger:dagger:2.24'
+//    annotationProcessor 'com.google.dagger:dagger-compiler:2.24'
+//    annotationProcessor 'com.google.dagger:dagger-android-processor:2.24'
+//    implementation 'com.google.dagger:dagger-android-support:2.24'
 }
